# era5-analysis

./: .cookiecutter.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml  tests2.yml
docs/: conf.py  index.md  reference.md  usage.md
notebooks/: era5_windspeed_analysis.ipynb  load_era5_data.ipynb
src/era5-analysis/: __init__.py  __main__.py
src/kwindy/: __init__.py  __main__.py  dataio.py  statistics.py
tests/: __init__.py  test_main.py  test_statistics.py
