[tool.poetry]
name = "kwindy"
version = "0.0.0"
description = "Era5 Analysis"
authors = ["Katie Brennan <mary.k.brennan6@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kbren/era5-analysis"
repository = "https://github.com/kbren/era5-analysis"
documentation = "https://era5-analysis.readthedocs.io"
packages = [
    { include = "kwindy", from = "src" },
]
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/kbren/era5-analysis/releases"

[tool.poetry.dependencies]
python = "^3.11"
click = ">=8.0.1"
xarray = "^2024.6.0"
dask = "^2024.7.1"
distributed = "^2024.7.1"
zarr = "^2.18.2"
cartopy = "^0.23.0"
matplotlib = "^3.9.1"
gcsfs = "^2024.6.1"
bokeh = "^3.5.0"
scipy = "^1.14.0"

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.0.2"
matplotlib = "^3.7.1"
ipympl = "^0.9.3"

[tool.poetry.dev-dependencies]
tox = "^4.6.0"
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
flake8 = ">=4.0.1"
isort = ">=5.10.1"
mypy = ">=0.930"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pytest-cov = "^4.1.0"
ruff = "^0.0.271"

[tool.poetry.scripts]
era5-analysis = "era5-analysis.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["era5-analysis", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
